--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -11,13 +11,16 @@
 $accent: #d4c17f;
 $white: #fff;
 
-// $fz-11-20: calc(11px + (20 - 11) * ((100vw - 360px) / (1920 - 360)));
-$fz-14-20: calc(14px + (20 - 14) * ((100vw - 360px) / (1920 - 360)));
-$fz-16-20: calc(16px + (20 - 16) * ((100vw - 360px) / (1920 - 360)));
-$fz-18-26: calc(18px + (26 - 18) * ((100vw - 360px) / (1920 - 360)));
-$fz-24-50: calc(24px + (50 - 24) * ((100vw - 360px) / (1920 - 360)));
+$fz-14-20: min(20px, calc(14px + (20 - 14) * ((100vw - 360px) / (1920 - 360))));
+$fz-16-20: min(20px, calc(16px + (20 - 16) * ((100vw - 360px) / (1920 - 360))));
+$fz-18-26: min(26px, calc(18px + (26 - 18) * ((100vw - 360px) / (1920 - 360))));
+$fz-24-50: min(50px, calc(24px + (50 - 24) * ((100vw - 360px) / (1920 - 360))));
 
-$g-14-18: calc(14px + (18 - 14) * ((100vw - 360px) / (1920 - 360)));
-$g-24-78: calc(24px + (78 - 24) * ((100vw - 360px) / (1920 - 360)));
-$pt-24-94: calc(24px + (94 - 24) * ((100vw - 360px) / (1920 - 360)));
-$mr-24-135: calc(24px + (135 - 24) * ((100vw - 360px) / (1920 - 360)));
+$g-14-18: min(18px, calc(14px + (18 - 14) * ((100vw - 360px) / (1920 - 360))));
+$g-24-78: min(78px, calc(24px + (78 - 24) * ((100vw - 360px) / (1920 - 360))));
+$mb-40-80: min(80px, calc(40px + (80 - 40) * ((100vw - 360px) / (1920 - 360))));
+$pt-24-94: min(94px, calc(24px + (94 - 24) * ((100vw - 360px) / (1920 - 360))));
+$mr-24-135: min(
+    135px,
+    calc(24px + (135 - 24) * ((100vw - 360px) / (1920 - 360)))
+);
