--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,8 +9,8 @@
 @import "./sections/header";
 @import "./sections/hero";
 @import "./sections/services";
-// @import "./sections/advantages";
-// @import "./sections/business";
+@import "./sections/how-to";
+@import "./sections/steps";
 // @import "./sections/footer";
 
 // Blocks
