--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -1,15 +1,14 @@
 .hero__content {
-    max-width: 1920px;
-    height: 142px;
-    margin-left: auto;
-    margin-right: auto;
-    // position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 50px;
-
-    background-image: url("./../images/header/Banner.webp");
+    // position: relative;
+    max-width: 1920px;
+    height: 142px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: url("./../images/header/banner.webp");
     // background-size: contain;
     background-size: cover;
     background-repeat: no-repeat;
@@ -19,7 +18,7 @@
 .hero__title {
     font-family: var(--font-family);
     font-weight: 700;
-    font-size: $fz-24-50;
+    @include responsive-font-size(24, 50);
     color: #fff;
 
     .hero__link {
@@ -29,9 +28,17 @@
     }
 
     @include breakpoint(md) {
-        // word-break: normal;
         hyphens: auto;
-
         padding: 0px 15px;
+    }
+}
+
+.hero__img {
+    overflow: hidden;
+    max-width: 210px;
+    width: 100%;
+
+    img {
+        width: inherit;
     }
 }
