--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1370px;
+  max-width: 1430px;
   width: 100%;
   padding: 0 15px;
 }
@@ -185,6 +185,24 @@ a1:hover {
   }
 }
 
+.header__logo {
+  width: 112px;
+  height: 112px;
+  overflow: hidden;
+}
+.header__logo img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media screen and (max-width: 576px) {
+  .header__logo {
+    width: 64px;
+    height: 64px;
+  }
+}
+
 .header__nav {
   display: flex;
   align-items: center;
@@ -198,9 +216,9 @@ a1:hover {
 .header__menu {
   display: flex;
   align-items: center;
-  gap: calc(24px + 54 * (100vw - 360px) / 1560);
-  margin-right: calc(24px + 111 * (100vw - 360px) / 1560);
-  font-size: calc(16px + 4 * (100vw - 360px) / 1560);
+  gap: min(78px, 24px + 54 * (100vw - 360px) / 1560);
+  margin-right: min(135px, 24px + 111 * (100vw - 360px) / 1560);
+  font-size: min(20px, 16px + 4 * (100vw - 360px) / 1560);
   text-transform: uppercase;
   text-wrap: nowrap;
 }
@@ -218,21 +236,21 @@ a1:hover {
   background: var(--main-blue);
   font-family: var(--font-family);
   font-weight: 600;
-  font-size: calc(16px + 4 * (100vw - 360px) / 1560);
+  font-size: min(20px, 16px + 4 * (100vw - 360px) / 1560);
   text-transform: uppercase;
   color: #fff;
 }
 
 .hero__content {
-  max-width: 1920px;
-  height: 142px;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 50px;
-  background-image: url("./../images/header/Banner.webp");
+  max-width: 1920px;
+  height: 142px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url("./../images/header/banner.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -241,7 +259,7 @@ a1:hover {
 .hero__title {
   font-family: var(--font-family);
   font-weight: 700;
-  font-size: calc(24px + 26 * (100vw - 360px) / 1560);
+  font-size: max(24px, min(50px, 24px + (50 - 24) * (100vw - 360px) / (1920 - 360)));
   color: #fff;
 }
 .hero__title .hero__link {
@@ -258,9 +276,19 @@ a1:hover {
   }
 }
 
+.hero__img {
+  overflow: hidden;
+  max-width: 210px;
+  width: 100%;
+}
+.hero__img img {
+  width: inherit;
+}
+
 .services {
-  padding-top: calc(24px + 70 * (100vw - 360px) / 1560);
+  padding-top: min(94px, 24px + 70 * (100vw - 360px) / 1560);
   margin: 0px 15px;
+  margin-bottom: max(24px, min(80px, 24px + (80 - 24) * (100vw - 360px) / (1920 - 360)));
 }
 
 .services__list {
@@ -325,14 +353,17 @@ a1:hover {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  gap: 6px;
   border-radius: 10px;
   padding: 16px 20px;
   width: 100%;
   background-color: #f2f4f8;
 }
 .service-card__wrapper .service-card__info .service-card__info-item p {
-  font-size: calc(14px + 6 * (100vw - 360px) / 1560);
+  font-size: min(20px, 14px + 6 * (100vw - 360px) / 1560);
   color: #777;
+  -webkit-hyphens: auto;
+          hyphens: auto;
 }
 .service-card__wrapper .service-card__info .service-card__info-item p + p {
   font-weight: 700;
@@ -376,7 +407,7 @@ a1:hover {
   background: #fff5cc;
   font-family: var(--font-family);
   font-weight: 400;
-  font-size: calc(16px + 4 * (100vw - 360px) / 1560);
+  font-size: min(20px, 16px + 4 * (100vw - 360px) / 1560);
   color: #777;
   text-align: left;
 }
@@ -419,7 +450,7 @@ a1:hover {
 
 .service-card__description {
   font-weight: 400;
-  font-size: calc(16px + 4 * (100vw - 360px) / 1560);
+  font-size: min(20px, 16px + 4 * (100vw - 360px) / 1560);
 }
 
 .service-card__pag {
@@ -427,7 +458,7 @@ a1:hover {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: calc(14px + 4 * (100vw - 360px) / 1560);
+  gap: min(18px, 14px + 4 * (100vw - 360px) / 1560);
 }
 .service-card__pag .service-card__pag-item {
   display: flex;
@@ -440,7 +471,7 @@ a1:hover {
   height: 52px;
   font-family: var(--font-family);
   font-weight: 700;
-  font-size: calc(18px + 8 * (100vw - 360px) / 1560);
+  font-size: min(26px, 18px + 8 * (100vw - 360px) / 1560);
   text-transform: uppercase;
   text-align: center;
   color: var(--main-blue);
@@ -448,6 +479,138 @@ a1:hover {
 .service-card__pag .active {
   color: #fff;
   background: var(--main-blue);
+}
+
+.how-to {
+  padding-bottom: max(24px, min(68px, 24px + (68 - 24) * (100vw - 360px) / (1920 - 360)));
+}
+
+.how-to__content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: max(16px, min(38px, 16px + (38 - 16) * (100vw - 360px) / (1920 - 360)));
+  padding: 0 16px;
+  max-width: 1920px;
+  height: 142px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: url("./../images/header/banner.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.how-to__title {
+  margin-right: 90px;
+  font-weight: 700;
+  font-size: max(24px, min(40px, 24px + (40 - 24) * (100vw - 360px) / (1920 - 360)));
+  color: #fff;
+}
+.how-to__title .hero__link {
+  text-decoration: underline;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
+  color: #6ad3ff;
+}
+@media screen and (max-width: 992px) {
+  .how-to__title {
+    display: none;
+  }
+}
+
+.how-to__img {
+  overflow: hidden;
+  max-width: 210px;
+  width: 100%;
+}
+.how-to__img img {
+  width: inherit;
+}
+@media screen and (max-width: 576px) {
+  .how-to__img {
+    display: none;
+  }
+}
+
+.call-tow {
+  padding-top: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+}
+.call-tow .call-tow__box {
+  display: flex;
+  flex-direction: column;
+  max-width: 698px;
+  width: 100%;
+}
+.call-tow .call-tow__box .call-tow__title {
+  font-weight: 700;
+  font-size: 40px;
+  margin-bottom: max(24px, min(48px, 24px + (48 - 24) * (100vw - 360px) / (1920 - 360)));
+}
+.call-tow .call-tow__box .call-tow__desc {
+  font-size: 26px;
+  line-height: 1.3;
+}
+.call-tow .call-tow__box .call-tow__desc:not(:last-child) {
+  margin-bottom: 1lh;
+}
+.call-tow .call-tow__img {
+  overflow: hidden;
+  max-width: 677px;
+  width: 100%;
+}
+.call-tow .call-tow__img img {
+  width: inherit;
+}
+@media screen and (max-width: 1400px) {
+  .call-tow {
+    flex-wrap: wrap;
+  }
+}
+
+.steps {
+  padding-top: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+  padding-bottom: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+  background-color: #fff5cc;
+}
+
+.steps__title {
+  font-weight: 700;
+  font-size: max(24px, min(40px, 24px + (40 - 24) * (100vw - 360px) / (1920 - 360)));
+  margin-bottom: max(24px, min(55px, 24px + (55 - 24) * (100vw - 360px) / (1920 - 360)));
+}
+
+.steps__list {
+  display: flex;
+  gap: max(20px, min(40px, 20px + (40 - 20) * (100vw - 360px) / (1920 - 360)));
+}
+.steps__list .steps__item {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.steps__list .steps__icon1 {
+  display: block;
+  margin: 0 auto;
+  max-width: 347px;
+  width: 100%;
+}
+.steps__list .steps__icon2 {
+  display: block;
+  margin: 0 auto;
+  max-width: 320px;
+  width: 100%;
+}
+.steps__list .steps__text {
+  font-size: max(18px, min(26px, 18px + (26 - 18) * (100vw - 360px) / (1920 - 360)));
+}
+@media screen and (max-width: 1400px) {
+  .steps__list {
+    flex-wrap: wrap;
+  }
 }
 
 .btn {
@@ -458,7 +621,7 @@ a1:hover {
   border: 0;
   font-family: var(--font-family);
   font-weight: 600;
-  font-size: calc(16px + 4 * (100vw - 360px) / 1560);
+  font-size: max(16px, min(20px, 16px + (20 - 16) * (100vw - 360px) / (1920 - 360)));
   color: #fff;
   text-wrap: nowrap;
   text-transform: uppercase;
