--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -1,6 +1,7 @@
 .services {
     padding-top: $pt-24-94;
     margin: 0px 15px;
+    @include margin-bottom(24, 80);
 }
 .services__list {
     display: flex;
@@ -69,6 +70,7 @@
             flex-wrap: wrap;
             align-items: center;
             justify-content: space-between;
+            gap: 6px;
 
             border-radius: 10px;
             padding: 16px 20px;
@@ -79,6 +81,7 @@
             p {
                 font-size: $fz-14-20;
                 color: #777;
+                hyphens: auto;
             }
 
             p + p {
