feat: add section - what-inside

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./sections/services";
 @import "./sections/how-to";
 @import "./sections/steps";
+@import "./sections/what-inside";
 // @import "./sections/footer";
 
 // Blocks
