--- a/css/main.css
+++ b/css/main.css
@@ -613,6 +613,150 @@ a1:hover {
   }
 }
 
+.what-inside {
+  padding-top: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+  padding-bottom: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+}
+
+.what-inside__title {
+  font-weight: 700;
+  font-size: 40px;
+  margin-bottom: 48px;
+}
+
+.what-inside__desc {
+  font-weight: 400;
+  font-size: 26px;
+}
+
+.what-inside__text {
+  font-weight: 700;
+  font-size: 26px;
+}
+
+.what-inside__box {
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+@media screen and (max-width: 1400px) {
+  .what-inside__box {
+    flex-wrap: wrap;
+    row-gap: 92px;
+  }
+}
+
+.truck,
+.mileage,
+.repair,
+.difficulty {
+  position: relative;
+  width: 332px;
+  height: 271px;
+  background-color: #0297d4;
+  border-radius: 20px;
+  padding: 34px 32px 0px 32px;
+  line-height: 1.2;
+}
+.truck .truck__title,
+.truck .mileage__title,
+.truck .repair__title,
+.truck .difficulty__title,
+.mileage .truck__title,
+.mileage .mileage__title,
+.mileage .repair__title,
+.mileage .difficulty__title,
+.repair .truck__title,
+.repair .mileage__title,
+.repair .repair__title,
+.repair .difficulty__title,
+.difficulty .truck__title,
+.difficulty .mileage__title,
+.difficulty .repair__title,
+.difficulty .difficulty__title {
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  color: #fff;
+  margin-bottom: 17px;
+}
+.truck .truck__text,
+.truck .mileage__text,
+.truck .repair__text,
+.truck .difficulty__text,
+.mileage .truck__text,
+.mileage .mileage__text,
+.mileage .repair__text,
+.mileage .difficulty__text,
+.repair .truck__text,
+.repair .mileage__text,
+.repair .repair__text,
+.repair .difficulty__text,
+.difficulty .truck__text,
+.difficulty .mileage__text,
+.difficulty .repair__text,
+.difficulty .difficulty__text {
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  color: #fff;
+  word-wrap: break-word;
+}
+
+.truck::before,
+.mileage::before,
+.repair::before,
+.difficulty::before {
+  content: "";
+  position: absolute;
+  top: -70px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 140px;
+  height: 72px;
+  background-color: #0297d4;
+  border-top-left-radius: 70px;
+  border-top-right-radius: 70px;
+}
+
+.truck::after {
+  content: url("./../images/what-inside/truck.webp");
+  display: block;
+  position: absolute;
+  top: -16px;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
+.mileage::after {
+  content: url("./../images/what-inside/mileage.webp");
+  display: block;
+  position: absolute;
+  top: -16px;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
+.repair::after {
+  content: url("./../images/what-inside/repair.webp");
+  display: block;
+  position: absolute;
+  top: -16px;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
+.difficulty::after {
+  content: url("./../images/what-inside/difficulty.webp");
+  display: block;
+  position: absolute;
+  top: -16px;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
 .btn {
   position: relative;
   display: inline-block;
