--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,10 +12,12 @@
 @import "./sections/how-to";
 @import "./sections/steps";
 @import "./sections/what-inside";
+@import "./sections/advantages";
+@import "./sections/evacuators";
 // @import "./sections/footer";
 
 // Blocks
 @import "./blocks/btn";
-// @import "./blocks/sticky-btns";
+@import "./blocks/text-style";
 // @import "./blocks/button";
 // @import "./blocks/pagecrm";
