--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,35 @@
-html {
-  box-sizing: border-box;
+/* Reset and base styles  */
+* {
+  padding: 0px;
+  margin: 0px;
+  border: none;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding-bottom: 400px;
-  background-color: #ccc;
+/* Links */
+a,
+a:link,
+a:visited {
+  text-decoration: none;
 }
 
-p {
-  margin: 0;
+a:hover {
+  text-decoration: none;
 }
 
-figure {
-  margin: 0;
+/* Common */
+aside,
+nav,
+footer,
+header,
+section,
+main {
+  display: block;
 }
 
 h1,
@@ -27,49 +37,73 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  margin: 0;
+h6,
+p {
   font-size: inherit;
   font-weight: inherit;
 }
 
 ul,
-ol,
-dd {
-  margin: 0;
-  padding: 0;
+ul li {
   list-style: none;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer;
+img {
+  vertical-align: top;
 }
 
-button {
-  background-color: transparent;
-  color: inherit;
-  border-width: 0;
-  border: 0;
-  padding: 0;
-  cursor: pointer;
+img,
+svg {
+  max-width: 100%;
+  height: auto;
 }
 
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-  margin: 0;
-}
-
-cite {
+address {
   font-style: normal;
 }
 
-fieldset {
-  border-width: 0;
+/* Form */
+input,
+textarea,
+button,
+select {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: transparent;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button,
+input[type=submit] {
+  display: inline-block;
+  box-shadow: none;
+  background-color: transparent;
+  background: none;
+  cursor: pointer;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
+
+button::-moz-focus-inner {
   padding: 0;
-  margin: 0;
+  border: 0;
+}
+
+label {
+  cursor: pointer;
+}
+
+legend {
+  display: block;
 }
 
 @font-face {
@@ -757,6 +791,147 @@ a1:hover {
   transform: translate(-50%, -50%) scale(0.5);
 }
 
+.advantages {
+  padding-top: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+  padding-bottom: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+}
+
+.advantages__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 34px;
+  margin-bottom: 100px;
+}
+.advantages__wrapper .advantages__inner {
+  max-width: 733px;
+  width: 100%;
+}
+.advantages__wrapper .advantages__img {
+  overflow: hidden;
+  max-width: 630px;
+  width: 100%;
+}
+.advantages__wrapper .advantages__img img {
+  display: block;
+  width: inherit;
+}
+@media screen and (max-width: 1400px) {
+  .advantages__wrapper {
+    flex-wrap: wrap;
+  }
+}
+
+.advantages__title {
+  margin-bottom: 3rem;
+}
+
+.advantages__desc {
+  margin-bottom: 2rem;
+}
+.advantages__desc span {
+  font-weight: 700;
+}
+
+.advantages-list__item {
+  position: relative;
+  margin-left: 3rem;
+}
+.advantages-list__item:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.advantages-list__item::before {
+  content: url("./../images/svg/done.svg");
+  position: absolute;
+  display: block;
+  top: 0;
+  left: -3rem;
+}
+
+.evacuator-info {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+.evacuator-info .evacuator-info__payment,
+.evacuator-info .evacuator-info__arrival {
+  max-width: 684px;
+  width: 100%;
+  width: 684px;
+  padding: 48px;
+  border-radius: 20px;
+  background: #fff5cc;
+}
+.evacuator-info .evacuator-info__payment p:not(:last-child),
+.evacuator-info .evacuator-info__arrival p:not(:last-child) {
+  margin-bottom: 1lh;
+}
+.evacuator-info .evacuator-info__title {
+  margin-bottom: 32px;
+}
+@media screen and (max-width: 1400px) {
+  .evacuator-info {
+    flex-wrap: wrap;
+  }
+}
+
+.evacuators {
+  padding-top: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+  padding-bottom: max(24px, min(100px, 24px + (100 - 24) * (100vw - 360px) / (1920 - 360)));
+}
+
+.evacuators__title {
+  margin-bottom: 3rem;
+}
+
+.evacuators__description {
+  margin-bottom: 1lh;
+}
+
+.evacuators__subtitle {
+  margin-bottom: 2rem;
+}
+
+.evacuators__types .evacuator-card {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  border-radius: 20px;
+  padding: 40px;
+  width: 684px;
+  height: 682px;
+  box-shadow: 2px 2px 10px 2px rgba(39, 52, 58, 0.15);
+  background: #fff;
+}
+.evacuators__types .evacuator-card .evacuator-card__image {
+  overflow: hidden;
+  max-width: 604px;
+  width: 100%;
+  margin: 0 auto;
+}
+.evacuators__types .evacuator-card .evacuator-card__image img {
+  display: block;
+  width: inherit;
+}
+
+.swiper .swiper-button-prev::after,
+.swiper .swiper-button-next::after {
+  color: darkred;
+  font-size: 80px;
+}
+
+.swiper .swiper-pagination {
+  bottom: 0px;
+}
+
+.swiper .swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  font-size: 14px;
+  background-color: darkred;
+}
+
 .btn {
   position: relative;
   display: inline-block;
@@ -795,4 +970,39 @@ a1:hover {
   border-radius: 50px;
   padding: 6px 36px 10px;
   max-width: 336px;
+}
+
+.h2-text {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 40px;
+  color: var(--dark);
+}
+
+.h3-text {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 26px;
+  color: var(--dark);
+}
+
+.p-text {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 26px;
+  color: var(--dark);
+}
+
+.card-title {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--dark);
+}
+
+.card-desc {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 20px;
+  color: var(--dark);
 }/*# sourceMappingURL=main.css.map */
