--- a/scss/blocks/_text-style.scss
+++ b/scss/blocks/_text-style.scss
@@ -22,13 +22,15 @@
 .card-title {
     font-family: var(--font-family);
     font-weight: 700;
-    font-size: 20px;
+    // font-size: 20px;
+    @include resp(font-size, 18, 20);
     color: var(--dark);
 }
 
 .card-desc {
     font-family: var(--font-family);
     font-weight: 400;
-    font-size: 20px;
+    // font-size: 20px;
+    @include resp(font-size, 16, 20);
     color: var(--dark);
 }
