--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./sections/what-inside";
 @import "./sections/advantages";
 @import "./sections/evacuators";
+@import "./sections/info";
 // @import "./sections/footer";
 
 // Blocks
