--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Reset and base styles  */
 * {
   padding: 0px;
@@ -881,7 +882,7 @@ a1:hover {
   max-width: 684px;
   width: 100%;
   width: 684px;
-  padding: 48px;
+  padding: max(20px, min(48px, 20px + (48 - 20) * (100vw - 360px) / (1920 - 360)));
   border-radius: 20px;
   background: #fff5cc;
 }
@@ -903,7 +904,7 @@ a1:hover {
 }
 
 .evacuators__title {
-  margin-bottom: 3rem;
+  margin-bottom: 1lh;
 }
 
 .evacuators__description {
@@ -911,9 +912,12 @@ a1:hover {
 }
 
 .evacuators__subtitle {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
+.evacuators__types {
+  height: max(570px, min(682px, 570px + (682 - 570) * (100vw - 360px) / (1920 - 360)));
+}
 .evacuators__types .evacuator-card {
   display: flex;
   flex-direction: column;
@@ -921,8 +925,8 @@ a1:hover {
   border-radius: 20px;
   padding: max(20px, min(40px, 20px + (40 - 20) * (100vw - 360px) / (1920 - 360)));
   width: 684px;
-  height: 682px;
-  box-shadow: 2px 2px 10px 2px rgba(39, 52, 58, 0.15);
+  height: 100%;
+  box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
   background: #fff;
 }
 .evacuators__types .evacuator-card .evacuator-card__image {
@@ -998,6 +1002,98 @@ a1:hover {
   height: 12px;
 }
 
+.info {
+  background-color: #fff5cc;
+}
+
+.info__wrapper {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1920px;
+  width: 100%;
+}
+@media screen and (max-width: 1400px) {
+  .info__wrapper {
+    flex-wrap: wrap;
+  }
+}
+
+.info__wrapper--reverse {
+  flex-direction: row-reverse;
+}
+@media screen and (max-width: 1400px) {
+  .info__wrapper--reverse {
+    flex-direction: row;
+  }
+}
+
+.info-block {
+  margin: 0 auto;
+  max-width: 961px;
+  width: 100%;
+  padding: 80px 56px 60px 0px;
+}
+@media screen and (max-width: 1400px) {
+  .info-block {
+    padding: 20px 15px 20px 15px;
+  }
+}
+.info-block .info-block__box {
+  margin-left: auto;
+  max-width: 644px;
+  width: 100%;
+}
+@media screen and (max-width: 1400px) {
+  .info-block .info-block__box {
+    margin-right: auto;
+  }
+}
+.info-block .info-block__box .info-block__title {
+  margin-bottom: 0.6lh;
+}
+.info-block .info-block__box .info-block__desc {
+  margin-bottom: 0.8lh;
+}
+.info-block .info-block__box .info-block__list-item:not(:last-child) {
+  margin-bottom: 1lh;
+}
+.info-block .info-block__box .info-block__list-item::before {
+  content: "✔";
+  margin-right: 10px;
+  color: blue;
+}
+
+.image-block {
+  margin: 0 auto;
+  overflow: hidden;
+  max-width: 961px;
+  width: 100%;
+}
+.image-block img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.info__wrapper.info__wrapper--reverse .info-block {
+  padding: 80px 0px 60px 56px;
+}
+@media screen and (max-width: 1400px) {
+  .info__wrapper.info__wrapper--reverse .info-block {
+    padding: 20px 15px 20px 15px;
+  }
+}
+.info__wrapper.info__wrapper--reverse .info-block .info-block__box {
+  margin-right: auto;
+  margin-left: 0;
+}
+@media screen and (max-width: 1400px) {
+  .info__wrapper.info__wrapper--reverse .info-block .info-block__box {
+    margin-left: auto;
+  }
+}
+
 .btn {
   position: relative;
   display: inline-block;
@@ -1041,21 +1137,21 @@ a1:hover {
 .h2-text {
   font-family: var(--font-family);
   font-weight: 700;
-  font-size: 40px;
+  font-size: max(32px, min(40px, 32px + (40 - 32) * (100vw - 360px) / (1920 - 360)));
   color: var(--dark);
 }
 
 .h3-text {
   font-family: var(--font-family);
   font-weight: 700;
-  font-size: 26px;
+  font-size: max(20px, min(26px, 20px + (26 - 20) * (100vw - 360px) / (1920 - 360)));
   color: var(--dark);
 }
 
 .p-text {
   font-family: var(--font-family);
   font-weight: 400;
-  font-size: 26px;
+  font-size: max(20px, min(26px, 20px + (26 - 20) * (100vw - 360px) / (1920 - 360)));
   color: var(--dark);
 }
 
