--- a/scss/sections/_evacuators.scss
+++ b/scss/sections/_evacuators.scss
@@ -4,7 +4,9 @@
 }
 
 .evacuators__title {
-    margin-bottom: 3rem;
+    // margin-bottom: 3rem;
+    // @include resp(margin-bottom, 32, 48);
+    margin-bottom: 1lh;
 }
 
 .evacuators__description {
@@ -12,10 +14,13 @@
 }
 
 .evacuators__subtitle {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
 
 .evacuators__types {
+    // height: 682px;
+    @include resp(height, 570, 682);
+
     .evacuator-card {
         display: flex;
         flex-direction: column;
@@ -27,9 +32,11 @@
         // padding: 40px;
         @include resp(padding, 20, 40);
         width: 684px;
-        height: 682px;
+        height: 100%;
+        // height: 682px;
 
-        box-shadow: 2px 2px 10px 2px rgba(39, 52, 58, 0.15);
+        // box-shadow: 2px 2px 10px 2px rgba(39, 52, 58, 0.15);
+        box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6); // box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
         background: #fff;
 
         .evacuator-card__image {
