feat: add section - price

--- a/css/main.css
+++ b/css/main.css
@@ -367,7 +367,6 @@ a1:hover {
   width: 100%;
   max-height: 328px;
   height: 100%;
-  border: 1px solid darkblue;
 }
 .service-card__wrapper .service-card__img img {
   width: 100%;
@@ -394,7 +393,7 @@ a1:hover {
   background-color: #f2f4f8;
 }
 .service-card__wrapper .service-card__info .service-card__info-item p {
-  font-size: min(20px, 14px + 6 * (100vw - 360px) / 1560);
+  font-size: max(14px, min(20px, 14px + (20 - 14) * (100vw - 360px) / (1920 - 360)));
   color: #777;
   -webkit-hyphens: auto;
           hyphens: auto;
@@ -408,7 +407,33 @@ a1:hover {
   max-width: 100%;
 }
 .service-card__wrapper .service-card__link > a:first-child {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 12px;
+}
+.service-card__wrapper .service-card__link > a:first-child::before {
+  content: url("./../images/sprite.svg#call-24");
+  display: block;
+  width: 15px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 8px;
+}
+.service-card__wrapper .service-card__link > a:first-child + a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.service-card__wrapper .service-card__link > a:first-child + a::before {
+  content: url("./../images/sprite.svg#old-phone");
+  display: block;
+  width: 24px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 8px;
 }
 .service-card__wrapper .service-card__link .card__link-button img {
   display: inline-block;
@@ -432,22 +457,31 @@ a1:hover {
   color: var(--main-blue);
 }
 .service-card__wrapper .service-card__link .service-card__adr {
-  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+  max-width: 336px;
+  width: 100%;
   margin: 21.5px 0px;
+  padding: 16px 0px 16px 20px;
   border-radius: 10px;
-  padding: 16px 20px;
-  width: 336px;
-  height: 92px;
   background: #fff5cc;
   font-family: var(--font-family);
   font-weight: 400;
-  font-size: min(20px, 16px + 4 * (100vw - 360px) / 1560);
+  font-size: max(16px, min(20px, 16px + (20 - 16) * (100vw - 360px) / (1920 - 360)));
   color: #777;
-  text-align: left;
 }
 .service-card__wrapper .service-card__link .service-card__adr br + span {
-  font-family: var(--font-family);
   color: #1b1e1f;
+}
+.service-card__wrapper .service-card__link .service-card__adr::before {
+  content: url("./../images/sprite.svg#location");
+  display: block;
+  width: 16px;
+  height: 21px;
+  background-repeat: no-repeat;
+  margin-right: 4px;
 }
 @media screen and (max-width: 1400px) {
   .service-card__wrapper {
@@ -498,6 +532,7 @@ a1:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   border: 1px solid var(--main-blue);
   border-radius: 6px;
   padding: 10px;
@@ -509,6 +544,8 @@ a1:hover {
   text-transform: uppercase;
   text-align: center;
   color: var(--main-blue);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
 }
 .service-card__pag .active {
   color: #fff;
@@ -580,12 +617,9 @@ a1:hover {
   width: 100%;
 }
 .call-tow .call-tow__box .call-tow__title {
-  font-weight: 700;
-  font-size: 40px;
-  margin-bottom: max(24px, min(48px, 24px + (48 - 24) * (100vw - 360px) / (1920 - 360)));
+  margin-bottom: 1lh;
 }
 .call-tow .call-tow__box .call-tow__desc {
-  font-size: 26px;
   line-height: 1.3;
 }
 .call-tow .call-tow__box .call-tow__desc:not(:last-child) {
@@ -857,18 +891,21 @@ a1:hover {
 }
 
 .advantages-list__item {
-  position: relative;
-  margin-left: 3rem;
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
 }
 .advantages-list__item:not(:last-child) {
-  margin-bottom: 2rem;
+  margin-bottom: 1lh;
 }
 .advantages-list__item::before {
-  content: url("./../images/svg/done.svg");
-  position: absolute;
+  content: url("./../images/sprite.svg#icon-done");
   display: block;
-  top: 0;
-  left: -3rem;
+  width: 34px;
+  height: 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
 }
 
 .evacuator-info {
@@ -914,9 +951,6 @@ a1:hover {
   margin-bottom: 3rem;
 }
 
-.evacuators__types {
-  height: max(570px, min(682px, 570px + (682 - 570) * (100vw - 360px) / (1920 - 360)));
-}
 .evacuators__types .evacuator-card {
   display: flex;
   flex-direction: column;
@@ -926,7 +960,6 @@ a1:hover {
   width: 684px;
   height: 100%;
   box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
-  background: #fff;
 }
 .evacuators__types .evacuator-card .evacuator-card__image {
   overflow: hidden;
@@ -948,6 +981,11 @@ a1:hover {
 .swiper {
   width: 100%;
   padding-bottom: 3rem;
+}
+@media screen and (max-width: 1400px) {
+  .swiper {
+    padding-bottom: 2rem;
+  }
 }
 
 .slider-wrapper .myslider-next::after,
@@ -1003,6 +1041,7 @@ a1:hover {
 
 .info {
   background-color: #fff5cc;
+  margin-bottom: max(1.625rem, min(6.625rem, 1.625rem + 5 * (100vw - 22.5rem) / 97.5));
 }
 
 .info__wrapper {
@@ -1103,6 +1142,117 @@ a1:hover {
   .info__wrapper.info__wrapper--reverse .info-block .info-block__box {
     margin-left: auto;
   }
+}
+
+.tabs {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1400px;
+  filter: drop-shadow(2px 2px 2px rgba(39, 52, 58, 0.15));
+}
+
+.tabs__label {
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  padding: 20px 52px;
+  border-radius: 20px 20px 0px 0px;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+}
+@media screen and (max-width: 768px) {
+  .tabs__label {
+    padding: 12px 18px;
+  }
+}
+
+.tabs__radio {
+  display: none;
+}
+
+.tabs__content {
+  padding: 48px 60px 60px 60px;
+  border-radius: 0px 20px 20px 20px;
+  background-color: #fff;
+  order: 1;
+  width: 100%;
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .tabs__content {
+    padding: 16px 12px 16px 12px;
+  }
+}
+.tabs__content > p:last-child {
+  margin-bottom: 0;
+}
+.tabs__content ol {
+  margin-bottom: 0;
+}
+
+.tabs__radio:checked + .tabs__label {
+  font-weight: bold;
+  color: #009578;
+  background-color: #fff;
+}
+
+.tabs__radio:checked + .tabs__label + .tabs__content {
+  display: initial;
+}
+
+.price__title {
+  margin-bottom: 0.661lh;
+}
+
+.price__description {
+  margin-bottom: 0.9lh;
+}
+
+.price__subtitle {
+  font-weight: 600;
+  margin-bottom: 0.9lh;
+}
+
+.price__factors,
+.price__cases,
+.price__steps {
+  margin-bottom: 0.9lh;
+}
+
+.price__factor,
+.price__case,
+.price__step {
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+}
+.price__factor:not(:last-child),
+.price__case:not(:last-child),
+.price__step:not(:last-child) {
+  margin-bottom: 0.9lh;
+}
+.price__factor::before,
+.price__case::before,
+.price__step::before {
+  content: url("./../images/sprite.svg#icon-done");
+  display: block;
+  width: 34px;
+  height: 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 10px;
+}
+
+.px-torem {
+  font-size: max(1rem, min(2rem, 1rem + 1 * (100vw - 22.5rem) / 97.5));
+}
+
+.px-torem1 {
+  font-size: 2rem;
+}
+
+.px-torem2 {
+  font-size: clamp(1rem, 0.769rem + 1.03vw, 2rem);
 }
 
 .btn {
