--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./sections/advantages";
 @import "./sections/evacuators";
 @import "./sections/info";
+@import "./sections/price";
 // @import "./sections/footer";
 
 // Blocks
