--- a/scss/sections/_services.scss
+++ b/scss/sections/_services.scss
@@ -16,7 +16,6 @@
     padding: 40px 48px;
     max-width: 1400px;
     width: 100%;
-    // height: 526px;
 
     box-shadow: 2px 2px 10px 2px rgba(39, 52, 58, 0.15);
     background: #fff;
@@ -47,15 +46,12 @@
         width: 100%;
         max-height: 328px;
         height: 100%;
-        // aspect-ratio: 1.262; // Aspect Ratio = 414 / 328
 
         img {
             width: 100%;
             height: auto;
             object-fit: cover;
         }
-
-        border: 1px solid darkblue;
     }
 
     .service-card__info {
@@ -79,7 +75,7 @@
             background-color: #f2f4f8;
 
             p {
-                font-size: $fz-14-20;
+                @include resp(font-size, 14, 20);
                 color: #777;
                 hyphens: auto;
             }
@@ -96,7 +92,37 @@
         max-width: 100%;
 
         & > a:first-child {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
             margin-bottom: 12px;
+
+            &::before {
+                content: url("./../images/sprite.svg#call-24");
+                display: block;
+                width: 15px;
+                height: 20px;
+                background-repeat: no-repeat;
+                background-position: center;
+                margin-right: 8px;
+            }
+        }
+
+        & > a:first-child + a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &::before {
+                content: url("./../images/sprite.svg#old-phone");
+                display: block;
+                width: 24px;
+                height: 20px;
+                background-repeat: no-repeat;
+                background-position: center;
+                margin-right: 8px;
+            }
         }
 
         .card__link-button {
@@ -124,25 +150,34 @@
         }
 
         .service-card__adr {
-            max-width: 100%;
-            margin: 21.5px 0px;
-            border-radius: 10px;
-            padding: 16px 20px;
-            width: 336px;
-            height: 92px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: start;
+            align-items: center;
 
+            max-width: 336px;
+            width: 100%;
+            margin: 21.5px 0px;
+            padding: 16px 0px 16px 20px;
+            border-radius: 10px;
             background: #fff5cc;
 
             font-family: var(--font-family);
             font-weight: 400;
-            font-size: $fz-16-20;
+            @include resp(font-size, 16, 20);
             color: #777;
 
-            text-align: left;
-
             br + span {
-                font-family: var(--font-family);
                 color: #1b1e1f;
+            }
+
+            &::before {
+                content: url("./../images/sprite.svg#location");
+                display: block;
+                width: 16px;
+                height: 21px;
+                background-repeat: no-repeat;
+                margin-right: 4px;
             }
         }
     }
@@ -202,6 +237,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
 
         border: 1px solid var(--main-blue);
         border-radius: 6px;
@@ -215,6 +251,8 @@
         text-transform: uppercase;
         text-align: center;
         color: var(--main-blue);
+
+        @include no-tap-highlight;
     }
 
     .active {
