--- a/scss/sections/_price.scss
+++ b/scss/sections/_price.scss
@@ -12,14 +12,17 @@
     place-items: center;
     cursor: pointer;
 
-    // width: 275px;
-    // height: 78px;
-
+    border-radius: 20px 20px 0px 0px;
     padding: 20px 52px;
+
     @include breakpoint(md) {
         padding: 12px 18px;
     }
-    border-radius: 20px 20px 0px 0px;
+
+    white-space: nowrap;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     @include no-tap-highlight;
 }
